# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: workflow.yml
src/: __init__.py  cli.py  diff.py
src/scripts/: __init__.py  gendiff.py
tests/: conftest.py  test_gen_diff_plain.py
tests/fixtures/: answer_null_first.txt  answer_null_second.txt
