[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Вычислитель отличий"
authors = ["Denis S. <makafonov@gmail.com>"]

packages = [
  { include = "src" },
]

[tool.poetry.scripts]
gendiff = "src.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
wemake-python-styleguide = "^0.15.2"
yapf = "^0.31.0"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
